# Wheel_Robot_App

./: app_key  simple_rtsp.py
Kortium/: settings.gradle
Kortium/app/: build.gradle
Kortium/app/release/: output-metadata.json
Kortium/app/release/baselineProfiles/0/: app-release.dm
Kortium/app/release/baselineProfiles/1/: app-release.dm
Kortium/app/src/main/: AndroidManifest.xml
Kortium/gradle/wrapper/: gradle-wrapper.properties
transport_plaform_workspace-main/: .gitignore  run.bat
transport_plaform_workspace-main/docker_files/: Dockerfile  README.md  build_docker.sh  into.bash  run.bash  stop.bash
transport_plaform_workspace-main/docker_files/remote_master/: into.bash  run.bash  stop.bash
transport_plaform_workspace-main/docker_files/server_test/: Dockerfile  build_docker.sh  run.bash
transport_plaform_workspace-main/workspace/src/connection_manager/: CMakeLists.txt  package.xml  setup.py
transport_plaform_workspace-main/workspace/src/connection_manager/pythonLibsTCP/: TCPServer.py  tcp_bpnp.py  tcp_packer_unpacker.py
transport_plaform_workspace-main/workspace/src/connection_manager/scripts/: bort_tester.py  ping_watchdog.py
transport_plaform_workspace-main/workspace/src/map_route_control/: CMakeLists.txt  package.xml
transport_plaform_workspace-main/workspace/src/map_route_control/scripts/: angle_data.py  local_map_generator.py
transport_plaform_workspace-main/workspace/src/pid/: CHANGELOG.rst  CMakeLists.txt  package.xml
transport_plaform_workspace-main/workspace/src/pid/cfg/: Pid.cfg
transport_plaform_workspace-main/workspace/src/pid/launch/: differential_drive_sim.launch  servo_sim.launch  sim_time.launch
transport_plaform_workspace-main/workspace/src/pid/src/: autotune.cpp  controller.cpp  pid.cpp  plant_sim.cpp  setpoint_node.cpp  sim_time.cpp
transport_plaform_workspace-main/workspace/src/platform_controller_comm/: CMakeLists.txt  package.xml  setup.py
transport_plaform_workspace-main/workspace/src/platform_controller_comm/action/: MotorsAction.action
transport_plaform_workspace-main/workspace/src/platform_controller_comm/include/: COMPort.h  COM_bpnp_communicator.h  bpnp_package_types.h  bpnp_packet_detector.h  bpnp_packet_packer.h  crc8.h  crc_parameters.h  message_waiter.h  utils.h
transport_plaform_workspace-main/workspace/src/platform_controller_comm/launch/: drivers.launch  light.launch  ros_auto_run.launch  sensors.launch  server.launch  static_tf.launch  urdf.launch
transport_plaform_workspace-main/workspace/src/platform_controller_comm/msg/: DebugMsg.msg  MotorStatus.msg  PacketContent.msg  WheelRotation.msg
transport_plaform_workspace-main/workspace/src/platform_controller_comm/pythonLibs/: bpnp.py  test_bpnp.py
transport_plaform_workspace-main/workspace/src/platform_controller_comm/rviz/: lidar_and_US.rviz
transport_plaform_workspace-main/workspace/src/platform_controller_comm/scripts/: data_logger.py
transport_plaform_workspace-main/workspace/src/platform_controller_comm/scripts/centralHub/: CentralHub.py  IMUDriver.py  LightControl.py  USDriver.py
transport_plaform_workspace-main/workspace/src/platform_controller_comm/scripts/diagnosticTool/: checkFrequency.py
transport_plaform_workspace-main/workspace/src/platform_controller_comm/scripts/motorScripts/: FMotorDriver.py  MotorsDriver.py  RMotorDriver.py
transport_plaform_workspace-main/workspace/src/platform_controller_comm/scripts/testMovement/: axisCalculation.py  circle.py  eight.py  forward-backward.py  wheelCalculation.py
transport_plaform_workspace-main/workspace/src/platform_controller_comm/scripts/visualisation/: tf_visualizer.py
transport_plaform_workspace-main/workspace/src/platform_controller_comm/src/: central_hub_com.cpp  front_motor_com.cpp  keyboard_control.cpp  rear_motor_com.cpp
transport_plaform_workspace-main/workspace/src/platform_controller_comm/srv/: LightCommand.srv
transport_plaform_workspace-main/workspace/src/platform_controller_comm/urdf/: transport_platform.urdf
transport_plaform_workspace-main/workspace/src/platform_velocity_and_pose/: CMakeLists.txt  package.xml  setup.py
transport_plaform_workspace-main/workspace/src/ublox/: README.md
(+41 files in other folders)
